API-Organizador-Eventos/API-Organizador-Eventos/src/main/kotlin/com/example/API_Organizador_Eventos/error/exception/NotFoundException.kt
package com.example.API_Organizador_Eventos.error.exception

class NotFoundException(message: String) : RuntimeException("Not Found Exception (404). $message") {
}